- set 'updating' in both tables list if we have two of them (because of subquery) (BUG#13236) - fixed test